# substracer

./: Cargo.toml  README.md  clippy.toml
app/: craco.config.js  package-lock.json  package.json  paths.json
app/src/: App.tsx  AppProvider.tsx  AppRouter.tsx  declarations.d.ts  index.scss  routeList.tsx
app/src/assets/3d-social-icons/: index.tsx
app/src/assets/3d_shapes/Cone/: index.tsx
app/src/assets/3d_shapes/Cube-1/: index.tsx
app/src/assets/3d_shapes/Cube-2/: index.tsx
app/src/assets/3d_shapes/Cylinder/: index.tsx
app/src/assets/3d_shapes/Pill/: index.tsx
app/src/assets/3d_shapes/RoundCube-1/: index.tsx
app/src/assets/3d_shapes/RoundCube-2/: index.tsx
app/src/assets/3d_shapes/Sphere/: index.tsx
app/src/assets/3d_shapes/SuperToroid-2/: index.tsx
app/src/assets/arrows/: index.tsx
app/src/assets/image-backgrounds/: index.tsx
app/src/assets/social-icons/: index.tsx
app/src/components/: AppBar.tsx  BackgroundImageSetting.tsx  BackgroundMeshGradientSetting.tsx  BackgroundSolidSetting.tsx  BoxShadowSelectorButton.tsx  BrowseUnsplashPhoto.tsx  BrowseUnsplashPhotoDrawer.tsx  CanvasArrowAnnotationLayer.tsx  CanvasBarChartLayer.tsx  CanvasChartAxisSetting.tsx  CanvasChartLayoutLayer.tsx  CanvasEditorZoomView.tsx  CanvasImageLayer.tsx  CanvasLayer.tsx  CanvasLayerBarChartSetting.tsx  CanvasLayerContainerSetting.tsx  CanvasLayerContributionChartSetting.tsx  CanvasLayerEmojiSetting.tsx  CanvasLayerExportSetting.tsx  CanvasLayerGeneralChartSetting.tsx  CanvasLayerGeneralSetting.tsx  CanvasLayerLineChartSetting.tsx  CanvasLayerOrderSetting.tsx  CanvasLayerPieChartSetting.tsx  CanvasLayerSetting.tsx  CanvasLayerStatusBar.tsx  CanvasLayerSvgSetting.tsx  CanvasLeftSider.tsx  CanvasLeftSiderActionButton.tsx  CanvasPHProductLayer.tsx  ChartDataEditorModal.tsx  DateTimePickerModal.tsx  DescriptionItem.tsx  FileImageItemCard.tsx  FontStyleSetting.tsx  HideLayerButton.tsx  ImageFormatSelector.tsx  ImageItemCard.tsx  IntegrationActionModal.tsx  LayerListItem.tsx  (+24 more)
app/src/components/canvas/: BackgroundGradientSetting.tsx  BackgroundImageSetting.tsx  BackgroundMeshGradientSetting.tsx  BackgroundSolidSetting.tsx  BrowseUnsplashPhoto.tsx  BrowseUnsplashPhotoDrawer.tsx  CanvasChartAxisSetting.tsx  CanvasChartLayoutLayer.tsx  CanvasEditor.tsx  CanvasEmojiAnnotationLayer.tsx  CanvasLayerArrowSetting.tsx  CanvasLayerBackgroundSetting.tsx  CanvasLayerBarChartSetting.tsx  CanvasLayerContainerSetting.tsx  CanvasLayerContributionChartSetting.tsx  CanvasLayerExportSetting.tsx  CanvasLayerFontStyleSetting.tsx  CanvasLayerGeneralChartSetting.tsx  CanvasLayerGeneralSetting.tsx  CanvasLayerLineChartSetting.tsx  CanvasLayerPieChartSetting.tsx  CanvasLayerSetting.tsx  CanvasLayerStatusBar.tsx  CanvasLayerSvgSetting.tsx  CanvasLayerTextSetting.tsx  CanvasLeftSider.tsx  CanvasLineChartLayer.tsx  CanvasPHProductLayer.tsx  CanvasPieChartLayer.tsx  CanvasSquareAnnotationLayer.tsx  CanvasStudioLayout.tsx  CanvasTextAnnotationLayer.tsx  ChartDataEditorButton.tsx  ChartDataEditorModal.tsx  CloseLayerButton.tsx  DuplicateButton.tsx  EmojiPickerButton.tsx  FontStyleSetting.tsx  LayerListItem.tsx  SizePresetButton.tsx  (+3 more)
app/src/components/modal/: AddNewNodeModal.tsx  ChartDataEditorModal.tsx  ModalContainer.tsx  UploadImageModal.tsx  ViewLayerTemplateModal.tsx
app/src/components/sider/: CanvasLeftSider.tsx  SiderAnnotationAction.tsx  SiderComponentSettingAction.tsx  SiderImageAction.tsx  index.ts
app/src/components/substrate/: AddNewNodeButton.tsx  index.ts
app/src/components/templates/github/: contribution-graph.tsx  index.ts  star-history-area-chart.tsx  star-history-line-chart.tsx
app/src/constants/: boxShadow.ts  brand.ts  canvasActionList.tsx  chart-data.ts  chart.tsx  env.ts  github.ts  gradient-pallete.ts  index.ts  listOfPresets.tsx  responsive.ts  size.ts  theme.ts
app/src/core/hooks/: index.ts  useCanvasDataExport.ts  useCanvasStudioService.ts  useGithubContributionGraph.ts  useKeyComboEvent.ts  useLayerConfig.ts  useLineChartConfig.ts  useMount.ts
app/src/core/models/: canvas-type.ts  data.ts  file.ts  github.ts  globals.ts  index.ts  line-chart.ts  producthunt.ts  social.ts
app/src/core/services/: canvas-studio.service.ts  github.service.ts  index.ts  producthunt.service.ts
app/src/pages/: AuthScreen.tsx  NotFoundScreen.tsx  SplashScreen.tsx  StudioScreen.tsx  index.tsx
app/src/stores/: index.ts  useCanvasStore.ts  useCanvasTemplate.tsx  useCanvasUtility.tsx  useDrawerStore.ts  useModalStore.ts  useSnackbarStore.ts
app/src/utils/: array.util.ts  canvas-template.ts  canvas.util.tsx  css.util.ts  date.util.ts  drawer.util.ts  gradient.util.ts  index.ts  modal.util.ts  rotatable.util.ts  string.util.ts  time.util.ts
dbschema/: chain_spec.esdl  default.esdl  network.esdl  node.esdl  pair.esdl
dbschema/migrations/: 00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql
runtime/: Cargo.toml
runtime/src/: config.rs  lib.rs
runtime/src/frame/balances/: README.md  mod.rs
server/: Cargo.toml
server/src/: backend.rs  chain_spec.rs  config.rs  constant.rs  main.rs  serializer.rs  service.rs  state.rs  types.rs
server/src/controllers/: chain_controller.rs  key_controller.rs  keypair_controller.rs  mod.rs  node_controller.rs
server/src/models/: chain_spec.rs  chain_spec_mdl.rs  keypair.rs  mod.rs  network.rs  network_node.rs  network_spec.rs  node.rs  node_mdl.rs  pair_mdl.rs
server/src/utils/: errors.rs  key_utils.rs  mod.rs  query_utils.rs
