[package]
name = "substrate-simulator-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
tiny-bip39 = "1.0.0"
array-bytes = "6.1"
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v1", "serde"] }

# cli dependencies
clap = { version = "4.3.16", features = ["derive"] }

# web server axum dependencies
axum = "0.6.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.193"
tracing-subscriber = "0.3.18"
tracing = "0.1"
serde_json = "1.0.108"
# edgedb dependencies
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust" }
edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust" }

# pallets
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-nicks = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
# substrate dependencies
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v1.0.0" }
# primitive dependencies
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
# consensus core + primitive dependencies
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# local dependencies
simulator-runtime = { version = "0.0.1-dev", path = "../runtime/" }

[features]
default = ["std"]
std = ["frame-support/std", "frame-system/std"]
