[package]
name = "substrate-simulator-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "debuginfo"

[dependencies]

# cli dependencies
clap = { version = "4.3.16", features = ["derive"] }

# web server axum dependencies
bs58 = "0.5.0"
tiny-bip39 = "1.0.0"
array-bytes = "6.1"
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v1", "serde"] }
field_names = "0.2.0"
serde_with = "3.0.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
chrono = { version = "0.4.26", features = [
 "serde",
 "alloc",
 "clock",
], default-features = false }
chrono-tz = { version = "0.8.3", features = ["serde"] }
axum = "0.6.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1"
serde_json = "1.0.108"
miette = { version = "5.10.0", features = ["fancy", "serde"] }
# edgedb dependencies
edgedb-derive = "0.5.1"
edgedb-errors = { version = "0.4.1", features = ["miette"] }
edgedb-tokio = { version = "0.5.0", features = ["serde_json", "miette-errors"] }
edgedb-protocol = { version = "0.6.0", features = ["all-types"] }

# pallets
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-nicks = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
# substrate dependencies
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v1.0.0" }
# primitive dependencies
sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
# consensus core + primitive dependencies
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# local dependencies
simulator-runtime = { version = "0.0.1-dev", path = "../runtime/" }
thiserror = "1.0.50"
validify = "1.0.12"
axum-extra = "0.9.0"


[features]
default = ["std"]
std = ["frame-support/std", "frame-system/std"]
